# Ornn

./: .gitignore  .gitleaks.toml  CLAUDE.md  DESIGN.md  README.md  eslint.config.js  package.json
.changeset/: admin-user-list-resolve-empty-labels.md  agent-api-positioning.md  agent-manual-cli-http-split.md  agent-manual-refresh.md  analytics-ui.md  audit-banner-ui.md  chilly-dodos-smoke.md  claude-issue-rules.md  collab-auto-approve.md  config.json  consolidate-share-button.md  cool-trees-drum.md  cozy-loops-taste.md  delete-non-latest-skill-version.md  design-md-canonical.md  design-system-docs.md  dockerfile-pin-bun-and-copy-real-workspace-package-jsons.md  docs-nyxid-cli-local-setup.md  docs-site-restructure.md  docs-to-frontend-static.md  drop-dead-nginx-locations.md  drop-ornn-web-minio-hack.md  dry-crews-sell.md  eighty-mice-kick.md  epic-1-clients-reorg.md  epic-1-cors-hardening.md  epic-1-foundations.md  epic-1-skills-domain-merge.md  epic-1-unify-apperror.md  epic-1-validate-middleware.md  epic-4-openapi-contract-test.md  epic-4a-ci-coverage.md  epic-4b-graceful-shutdown.md  epic-4c-boundary-lint.md  every-pants-start.md  fancy-nights-dance.md  forge-auth-pages.md  forge-chrome.md  forge-landing-docs.md  forge-primitives.md  (+65 more)
.github/: CODEOWNERS
deployment/: .env.sample.ornn
docs/: ARCHITECTURE.md  Architecture.md  Guide.md  api.md  api_route_refactor.md  conventions.md  migrations.md
ornn-sdk-python/: README.md  pyproject.toml
ornn-sdk-python/src/ornn_sdk/: __init__.py  client.py  errors.py  types.py
ornn-sdk-python/tests/: test_client.py
(+639 files in other folders)
