[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ornn-sdk"
version = "0.2.0"
description = "Python client for the Ornn skill platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Chrono AI" }]
keywords = ["ornn", "skills", "ai", "agents", "nyxid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "respx>=0.21",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/ChronoAIProject/Ornn"
Issues = "https://github.com/ChronoAIProject/Ornn/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ornn_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
